flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deployment
  labels:
    app: myflask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myflask
  template:
    metadata:
      name: flaskapp
      labels:
        app: myflask
    spec:
      containers:
      - name: myflaskapp
        image: tejaswini2808/myflaskapp:16
        ports:
        - containerPort: 5000
