flask-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flaskapp
  labels:
    name: myflask
spec:
  containers:
  - name: myflaskapp
    image: tejaswini2808/myflaskapp:v1
    ports:
    - containerPort: 5000
