flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - teju-28-flaskapp.16.176.112.54.nip.io
    secretName: flask-tls
  ingressClassName: nginx   
  rules:
  - host: teju-28-flaskapp.16.176.112.54.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskapp-service
            port:
              number: 80
